# excalidraw-diagram-skill

./: .gitignore  .pre-commit-config.yaml  README.md  SKILL.md  pyproject.toml
.github/workflows/: ci.yml
references/: extract_scene.py  json-schema.md  render_excalidraw.py  render_offline.py
tests/: _helpers.py  conftest.py  test_extract_scene.py  test_render_offline.py  test_roundtrip.py
